--- a/app/src/main/res/layout/content_fragment.xml
+++ b/app/src/main/res/layout/content_fragment.xml
@@ -11,21 +11,17 @@
         android:orientation="vertical"
         tools:context=".ui.ContentFragment">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+
 
             <TextView
                 android:id="@+id/name_text_view"
                 style="@style/ContentTextView"
-                android:layout_width="wrap_content" />
+                android:layout_width="match_parent" />
 
             <TextView
                 android:id="@+id/short_description_text_view"
                 style="@style/ContentTextView"
-                android:layout_width="wrap_content" />
-        </LinearLayout>
+                android:layout_width="match_parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,26 +31,36 @@
             <TextView
                 android:id="@+id/servings_text_view"
                 style="@style/ContentTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/prep_time_text_view"
                 style="@style/ContentTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/cook_time_text_view"
                 style="@style/ContentTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/total_time_text_view"
                 style="@style/ContentTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
         </LinearLayout>
 
         <TextView
