--- a/app/src/main/res/layout/recipe_fragment_item.xml
+++ b/app/src/main/res/layout/recipe_fragment_item.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_marginTop="@dimen/list_root_margin"
+    android:layout_marginStart="@dimen/list_root_margin"
+    android:layout_marginEnd="@dimen/list_root_margin"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/recipe_name_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/list_text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
     <TextView
-        android:id="@+id/recipe_servings_text_view"
-        android:layout_width="wrap_content"
+        android:id="@+id/recipe_short_description_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/list_text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
-    <TextView
-        android:id="@+id/recipe_total_time_text_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@color/white"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/recipe_servings_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/recipe_total_time_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="@color/white" />
+    </LinearLayout>
 </LinearLayout>
