--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,9 @@
     <dimen name="button_padding">8dp</dimen>
     <dimen name="fragment_bottom_margin">16dp</dimen>
     <dimen name="list_text_margin">4dp</dimen>
+    <dimen name="list_text_padding">8dp</dimen>
+    <dimen name="list_top_text_margin">8dp</dimen>
+    <dimen name="list_horizontal_text_margin">8dp</dimen>
     <dimen name="list_root_margin">16dp</dimen>
 
     <!-- cookbook fragment -->
