--- a/app/src/main/res/values/ints.xml
+++ b/app/src/main/res/values/ints.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="list_size_divisor">2</integer>
     <integer name="list_size_adjuster">240</integer>
+    <integer name="keyword_list_column_count">3</integer>
 </resources>
