--- a/app/src/main/res/layout/cookbook_edit_fragment.xml
+++ b/app/src/main/res/layout/cookbook_edit_fragment.xml
@@ -144,6 +144,29 @@
                 app:layout_constraintTop_toBottomOf="@id/edit_image_label"
                 tools:context="com.larsonapps.personalcookbook.ImageFragment" />
 
+            <TextView
+                android:id="@+id/edit_keyword_label"
+                style="@style/HeadingTextView"
+                android:text="@string/images"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edit_image_list_container" />
+
+            <Button
+                android:id="@+id/edit_add_keyword_button"
+                style="@style/AppButton"
+                android:text="@string/add_button_text"
+                app:icon="@drawable/ic_add_24px"
+                app:layout_constraintTop_toTopOf="@id/edit_keyword_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/edit_keyword_label" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/edit_keyword_list_container"
+                style="@style/AppFragmentContainer"
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/edit_keyword_label"
+                tools:context="com.larsonapps.personalcookbook.KeywordFragment" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
