--- a/app/src/main/res/layout/ingredient_fragment_item.xml
+++ b/app/src/main/res/layout/ingredient_fragment_item.xml
@@ -1,36 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/ingredient_amount_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/list_horizontal_text_margin"
+            android:layout_marginTop="@dimen/list_top_text_margin"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/ingredient_measure_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/list_text_padding"
+            android:paddingEnd="@dimen/list_text_padding"
+            android:layout_marginTop="@dimen/list_top_text_margin"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/ingredient_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/list_top_text_margin"
+            android:layout_marginEnd="@dimen/list_horizontal_text_margin"
+            android:textColor="@color/white" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ingredient_edit_image_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/edit_icon_margin"
+            android:background="@drawable/button_selector"
+            android:padding="@dimen/edit_icon_padding"
+            android:src="@drawable/ic_edit_24px" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ingredient_delete_image_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/edit_icon_margin"
+            android:background="@drawable/button_selector"
+            android:padding="@dimen/edit_icon_padding"
+            android:src="@drawable/ic_delete_24px" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/ingredient_text_view"
+        android:id="@+id/ingredient_preparation_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textColor="@color/white"/>
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ingredient_edit_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/edit_icon_padding"
-        android:layout_margin="@dimen/edit_icon_margin"
-        android:background="@drawable/button_selector"
-        android:src="@drawable/ic_edit_24px" />
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ingredient_delete_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/edit_icon_padding"
-        android:layout_margin="@dimen/edit_icon_margin"
-        android:background="@drawable/button_selector"
-        android:src="@drawable/ic_delete_24px" />
-
-    <CheckBox
-        android:id="@+id/ingredient_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_marginStart="@dimen/list_horizontal_text_margin"
+        android:layout_marginEnd="@dimen/list_horizontal_text_margin"
+        android:textColor="@color/white" />
 </LinearLayout>
