--- a/app/src/main/res/layout/keyword_fragment_item.xml
+++ b/app/src/main/res/layout/keyword_fragment_item.xml
@@ -5,28 +5,29 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/step_text_view"
+        android:id="@+id/keyword_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/list_horizontal_text_margin"
         android:layout_marginTop="@dimen/list_top_text_margin"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/step_edit_image_button"
+        android:id="@+id/keyword_edit_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/edit_icon_padding"
         android:layout_margin="@dimen/edit_icon_margin"
         android:background="@drawable/button_selector"
+        android:padding="@dimen/edit_icon_padding"
         android:src="@drawable/ic_edit_24px" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/step_delete_image_button"
+        android:id="@+id/keyword_delete_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/edit_icon_padding"
         android:layout_margin="@dimen/edit_icon_margin"
         android:background="@drawable/button_selector"
+        android:padding="@dimen/edit_icon_padding"
         android:src="@drawable/ic_delete_24px" />
 </LinearLayout>
